--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,10 @@
 
   
   <!-- <script type="module" src="/test.ts"></script> -->
+  <!-- <script type="module" src="/test2.ts"></script> -->
+
+  <!-- ----------------------------------------------- -->
+
   <script type="module" src="/setup.ts"></script>
 
   
