--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,9 @@
 
   <!-- ----------------------------------------------- -->
 
-  <script type="module" src="/setup.ts"></script>
+  <!-- <script type="module" src="/setup.ts"></script> -->
+  <!-- <script type="module" src="/pattern_one.ts"></script> -->
+  <script type="module" src="/pattern_two.ts"></script>
 
   
 </body>
