--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,8 @@
 
   <!-- <script type="module" src="/setup.ts"></script> -->
   <!-- <script type="module" src="/pattern_one.ts"></script> -->
-  <script type="module" src="/pattern_two.ts"></script>
+  <!-- <script type="module" src="/pattern_two.ts"></script> -->
+  <script type="module" src="/pattern_three.ts"></script>
 
   
 </body>
