--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,8 @@
   <!-- <script type="module" src="/setup.ts"></script> -->
   <!-- <script type="module" src="/pattern_one.ts"></script> -->
   <!-- <script type="module" src="/pattern_two.ts"></script> -->
-  <script type="module" src="/pattern_three.ts"></script>
+  <!-- <script type="module" src="/pattern_three.ts"></script> -->
+  <script type="module" src="/strength.ts"></script>
 
   
 </body>
