--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,12 @@
   <!-- <script type="module" src="/pattern_one.ts"></script> -->
   <!-- <script type="module" src="/pattern_two.ts"></script> -->
   <!-- <script type="module" src="/pattern_three.ts"></script> -->
-  <script type="module" src="/strength.ts"></script>
+  <!-- <script type="module" src="/strength.ts"></script> -->
+  <!-- <script type="module" src="/pattern_four.ts"></script> -->
+  <!-- <script type="module" src="/pattern_five.ts"></script> -->
+
+  <script type="module" src="/six.ts"></script>
+
 
   
 </body>
