--- a/src/index.html
+++ b/src/index.html
@@ -25,8 +25,13 @@
   <!-- <script type="module" src="/pattern_four.ts"></script> -->
   <!-- <script type="module" src="/pattern_five.ts"></script> -->
 
-  <script type="module" src="/six.ts"></script>
+  <!-- <script type="module" src="/six.ts"></script> -->
+  <!-- <script type="module" src="/seven.ts"></script> -->
+  <!-- <script type="module" src="/eight.ts"></script> -->
 
+  <!-- ----------------------------------------------- -->
+
+  <script type="module" src="/practicing.ts"></script>
 
   
 </body>
