--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
   <!-- ----------------------------------------------- -->
 
   <!-- <script type="module" src="/setup.ts"></script> -->
-  <!-- <script type="module" src="/pattern_one.ts"></script> -->
+  <script type="module" src="/pattern_one.ts"></script>
   <!-- <script type="module" src="/pattern_two.ts"></script> -->
   <!-- <script type="module" src="/pattern_three.ts"></script> -->
   <!-- <script type="module" src="/strength.ts"></script> -->
@@ -31,7 +31,7 @@
 
   <!-- ----------------------------------------------- -->
 
-  <script type="module" src="/practicing.ts"></script>
+  <!-- <script type="module" src="/practicing.ts"></script> -->
 
   
 </body>
