--- a/src/index.html
+++ b/src/index.html
@@ -18,12 +18,17 @@
   <!-- ----------------------------------------------- -->
 
   <!-- <script type="module" src="/setup.ts"></script> -->
-  <script type="module" src="/pattern_one.ts"></script>
-  <!-- <script type="module" src="/pattern_two.ts"></script> -->
+  <!-- <script type="module" src="/hello_world.ts"></script> -->
+  <script type="module" src="/foo_bar.ts"></script>
+
+  <!-- ----------------------------------------------- -->
+
   <!-- <script type="module" src="/pattern_three.ts"></script> -->
   <!-- <script type="module" src="/strength.ts"></script> -->
   <!-- <script type="module" src="/pattern_four.ts"></script> -->
   <!-- <script type="module" src="/pattern_five.ts"></script> -->
+  
+  <!-- ----------------------------------------------- -->
 
   <!-- <script type="module" src="/six.ts"></script> -->
   <!-- <script type="module" src="/seven.ts"></script> -->
