--- a/src/index.html
+++ b/src/index.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="global.css">
   <title>ThreeJS - Shaders - Patterns</title>
 </head>
+
 <body>
 
   <canvas class="webgl"></canvas>
 
 
-  
+
   <!-- <script type="module" src="/test.ts"></script> -->
   <!-- <script type="module" src="/test2.ts"></script> -->
 
@@ -19,7 +21,8 @@
 
   <!-- <script type="module" src="/setup.ts"></script> -->
   <!-- <script type="module" src="/hello_world.ts"></script> -->
-  <script type="module" src="/foo_bar.ts"></script>
+  <!-- <script type="module" src="/foo_bar.ts"></script> -->
+  <script type="module" src="/lorem_ipsum.ts"></script>
 
   <!-- ----------------------------------------------- -->
 
@@ -27,7 +30,7 @@
   <!-- <script type="module" src="/strength.ts"></script> -->
   <!-- <script type="module" src="/pattern_four.ts"></script> -->
   <!-- <script type="module" src="/pattern_five.ts"></script> -->
-  
+
   <!-- ----------------------------------------------- -->
 
   <!-- <script type="module" src="/six.ts"></script> -->
@@ -38,6 +41,7 @@
 
   <!-- <script type="module" src="/practicing.ts"></script> -->
 
-  
+
 </body>
+
 </html>
