--- a/src/index.html
+++ b/src/index.html
@@ -20,11 +20,17 @@
   <!-- ----------------------------------------------- -->
 
   <!-- <script type="module" src="/setup.ts"></script> -->
+
+  <!-- ----------------------------------------------- -->
+  <!-- my observations -->
+
   <!-- <script type="module" src="/hello_world.ts"></script> -->
   <!-- <script type="module" src="/foo_bar.ts"></script> -->
   <script type="module" src="/lorem_ipsum.ts"></script>
 
   <!-- ----------------------------------------------- -->
+  <!-- workshop -->
+
 
   <!-- <script type="module" src="/pattern_three.ts"></script> -->
   <!-- <script type="module" src="/strength.ts"></script> -->
