50 shades of gray

--- a/src/index.html
+++ b/src/index.html
@@ -22,14 +22,21 @@
   <!-- <script type="module" src="/setup.ts"></script> -->
 
   <!-- ----------------------------------------------- -->
-  <!-- my observations -->
+  <!-- workshop and my observations -->
 
   <!-- <script type="module" src="/hello_world.ts"></script> -->
   <!-- <script type="module" src="/foo_bar.ts"></script> -->
-  <script type="module" src="/lorem_ipsum.ts"></script>
 
   <!-- ----------------------------------------------- -->
-  <!-- workshop -->
+
+  <!-- my observations -->
+
+  <!-- <script type="module" src="/lorem_ipsum.ts"></script> -->
+  <!-- <script type="module" src="/black_n_white.ts"></script> -->
+  <script type="module" src="/gray_shades.ts"></script>
+
+  <!-- ----------------------------------------------- -->
+  <!-- workshop and some of my observations -->
 
 
   <!-- <script type="module" src="/pattern_three.ts"></script> -->
