--- a/src/index.html
+++ b/src/index.html
@@ -33,13 +33,13 @@
 
   <!-- <script type="module" src="/lorem_ipsum.ts"></script> -->
   <!-- <script type="module" src="/black_n_white.ts"></script> -->
-  <script type="module" src="/gray_shades.ts"></script>
+  <!-- <script type="module" src="/gray_shades.ts"></script> -->
 
   <!-- ----------------------------------------------- -->
   <!-- workshop and some of my observations -->
 
 
-  <!-- <script type="module" src="/pattern_three.ts"></script> -->
+  <script type="module" src="/grayscale.ts"></script>
   <!-- <script type="module" src="/strength.ts"></script> -->
   <!-- <script type="module" src="/pattern_four.ts"></script> -->
   <!-- <script type="module" src="/pattern_five.ts"></script> -->
