--- a/src/index.html
+++ b/src/index.html
@@ -39,8 +39,8 @@
   <!-- workshop and some of my observations -->
 
 
-  <script type="module" src="/grayscale.ts"></script>
-  <!-- <script type="module" src="/strength.ts"></script> -->
+  <!-- <script type="module" src="/grayscale.ts"></script> -->
+  <script type="module" src="/strength.ts"></script>
   <!-- <script type="module" src="/pattern_four.ts"></script> -->
   <!-- <script type="module" src="/pattern_five.ts"></script> -->
 
