--- a/src/index.html
+++ b/src/index.html
@@ -40,8 +40,8 @@
 
 
   <!-- <script type="module" src="/grayscale.ts"></script> -->
-  <script type="module" src="/strength.ts"></script>
-  <!-- <script type="module" src="/pattern_four.ts"></script> -->
+  <!-- <script type="module" src="/strength.ts"></script> -->
+  <script type="module" src="/grayscale_y.ts"></script>
   <!-- <script type="module" src="/pattern_five.ts"></script> -->
 
   <!-- ----------------------------------------------- -->
