more black less white

--- a/src/index.html
+++ b/src/index.html
@@ -22,31 +22,28 @@
   <!-- <script type="module" src="/setup.ts"></script> -->
 
   <!-- ----------------------------------------------- -->
-  <!-- workshop and my observations -->
+  <!-- ----       workshop and my observations -->
 
   <!-- <script type="module" src="/hello_world.ts"></script> -->
   <!-- <script type="module" src="/foo_bar.ts"></script> -->
 
   <!-- ----------------------------------------------- -->
-
-  <!-- my observations -->
+  <!-- ----       my observations -->
 
   <!-- <script type="module" src="/lorem_ipsum.ts"></script> -->
   <!-- <script type="module" src="/black_n_white.ts"></script> -->
   <!-- <script type="module" src="/gray_shades.ts"></script> -->
 
   <!-- ----------------------------------------------- -->
-  <!-- workshop and some of my observations -->
-
+  <!-- ----       workshop and some of my observations -->
 
   <!-- <script type="module" src="/grayscale.ts"></script> -->
   <!-- <script type="module" src="/strength.ts"></script> -->
-  <script type="module" src="/grayscale_y.ts"></script>
-  <!-- <script type="module" src="/pattern_five.ts"></script> -->
+  <!-- <script type="module" src="/grayscale_y.ts"></script> -->
 
   <!-- ----------------------------------------------- -->
 
-  <!-- <script type="module" src="/six.ts"></script> -->
+  <script type="module" src="/little_black_more_white.ts"></script>
   <!-- <script type="module" src="/seven.ts"></script> -->
   <!-- <script type="module" src="/eight.ts"></script> -->
 
