--- a/src/index.html
+++ b/src/index.html
@@ -41,10 +41,14 @@
   <!-- <script type="module" src="/strength.ts"></script> -->
   <!-- <script type="module" src="/grayscale_y.ts"></script> -->
 
+  <!-- <script type="module" src="/little_black_more_white.ts"></script> -->
   <!-- ----------------------------------------------- -->
 
-  <script type="module" src="/little_black_more_white.ts"></script>
-  <!-- <script type="module" src="/seven.ts"></script> -->
+  <!-- we use modulo inside shader here -->
+  <script type="module" src="/bars.ts"></script>
+
+  <!-- --------------------------------------------------- -->
+
   <!-- <script type="module" src="/eight.ts"></script> -->
 
   <!-- ----------------------------------------------- -->
