--- a/src/index.html
+++ b/src/index.html
@@ -45,7 +45,8 @@
   <!-- ----------------------------------------------- -->
 
   <!-- we use modulo inside shader here -->
-  <script type="module" src="/bars.ts"></script>
+  <!-- <script type="module" src="/bars.ts"></script> -->
+  <script type="module" src="/bars_again.ts"></script>
 
   <!-- --------------------------------------------------- -->
 
