--- a/src/index.html
+++ b/src/index.html
@@ -45,12 +45,12 @@
   <!-- ----------------------------------------------- -->
 
   <!-- we use modulo inside shader here -->
-  <script type="module" src="/bars.ts"></script>
+  <!-- <script type="module" src="/bars.ts"></script> -->
   <!-- <script type="module" src="/bars_again.ts"></script> -->
 
   <!-- --------------------------------------------------- -->
   <!-- we use modulo inside shader here, and also if else statement -->
-  <!-- <script type="module" src="/stripes.ts"></script> -->
+  <script type="module" src="/stripes.ts"></script>
 
   <!-- ----------------------------------------------- -->
 
