white stripes over x

--- a/src/index.html
+++ b/src/index.html
@@ -50,10 +50,22 @@
 
   <!-- --------------------------------------------------- -->
   <!-- we use modulo inside shader here, and also if else statement -->
-  <script type="module" src="/stripes.ts"></script>
-
+  <!-- <script type="module" src="/stripes.ts"></script> -->
+  <!-- <script type="module" src="/stripes_with_ternary.ts"></script> -->
   <!-- ----------------------------------------------- -->
+  <!-- Avoiding usage of if/if else statements and usage of ternarys
+   by using  step   function   -->
+  <!-- <script type="module" src="/step_function.ts"></script> -->
 
+  <!-- more patterns with step function -->
+  <!-- <script type="module" src="/little_white_stripes.ts"></script> -->
+  <script type="module" src="/little_white_segments_over_x.ts"></script>
+
+
+  <!-- ------------------------------------------------------- -->
+  <!-- ------------------------------------------------------- -->
+  <!-- ------------------------------------------------------- -->
+  <!-- ------------------------------------------------------- -->
   <!-- <script type="module" src="/practicing.ts"></script> -->
 
 
