--- a/src/index.html
+++ b/src/index.html
@@ -59,7 +59,12 @@
 
   <!-- more patterns with step function -->
   <!-- <script type="module" src="/little_white_stripes.ts"></script> -->
-  <script type="module" src="/little_white_segments_over_x.ts"></script>
+  <!-- <script type="module" src="/little_white_segments_over_x.ts"></script> -->
+
+  <!-- ------------------------------------------------------- -->
+  <!-- using both uv coordinates to vreate pattern -->
+
+  <script type="module" src="/crossing_stripes.ts"></script>
 
 
   <!-- ------------------------------------------------------- -->
