--- a/src/index.html
+++ b/src/index.html
@@ -62,9 +62,15 @@
   <!-- <script type="module" src="/little_white_segments_over_x.ts"></script> -->
 
   <!-- ------------------------------------------------------- -->
-  <!-- using both uv coordinates to vreate pattern -->
+  <!-- using both uv coordinates to create pattern -->
 
-  <script type="module" src="/crossing_stripes.ts"></script>
+  <!-- <script type="module" src="/crossing_stripes.ts"></script> -->
+  <!-- <script type="module" src="/crossing_stripes_concise.ts"></script> -->
+
+  <!-- ------------------------------------------------------- -->
+  <!-- grid -->
+  <script type="module" src="/grid.ts"></script>
+
 
 
   <!-- ------------------------------------------------------- -->
