grid and the edge

--- a/src/index.html
+++ b/src/index.html
@@ -69,7 +69,15 @@
 
   <!-- ------------------------------------------------------- -->
   <!-- grid -->
-  <script type="module" src="/grid.ts"></script>
+  <!-- <script type="module" src="/grid.ts"></script> -->
+
+  <!-- Even author of the workshop here forgot what he's doing
+   and started testing some values, so don't sweat if you don't
+   understand what's happening -->
+  <!-- I guess idea is to get familaiar yourself with the pattern
+    than understanding underlaying math -->
+
+  <script type="module" src="/grid_and_edge"></script>
 
 
 
