--- a/src/index.html
+++ b/src/index.html
@@ -61,6 +61,9 @@
   <!-- <script type="module" src="/little_white_stripes.ts"></script> -->
   <!-- <script type="module" src="/little_white_segments_over_x.ts"></script> -->
 
+  <script type="module" src="/changing_edge.ts"></script>
+
+
   <!-- ------------------------------------------------------- -->
   <!-- using both uv coordinates to create pattern -->
 
@@ -77,7 +80,7 @@
   <!-- I guess idea is to get familaiar yourself with the pattern
     than understanding underlaying math -->
 
-  <script type="module" src="/grid_and_edge"></script>
+  <!-- <script type="module" src="/grid_and_edge"></script> -->
 
 
 
