--- a/src/index.html
+++ b/src/index.html
@@ -61,7 +61,7 @@
   <!-- <script type="module" src="/little_white_stripes.ts"></script> -->
   <!-- <script type="module" src="/little_white_segments_over_x.ts"></script> -->
 
-  <script type="module" src="/changing_edge.ts"></script>
+  <!-- <script type="module" src="/changing_edge.ts"></script> -->
 
 
   <!-- ------------------------------------------------------- -->
@@ -82,6 +82,7 @@
 
   <!-- <script type="module" src="/grid_and_edge"></script> -->
 
+  <script type="module" src="/oposite_cyrilic_g"></script>
 
 
   <!-- ------------------------------------------------------- -->
