--- a/src/index.html
+++ b/src/index.html
@@ -80,9 +80,20 @@
   <!-- I guess idea is to get familaiar yourself with the pattern
     than understanding underlaying math -->
 
-  <!-- <script type="module" src="/grid_and_edge"></script> -->
+  <!-- <script type="module" src="/grid_and_edge.ts"></script> -->
 
-  <script type="module" src="/oposite_cyrilic_g"></script>
+  <!-- <script type="module" src="/oposite_cyrilic_g.ts"></script> -->
+
+  <!-- there is a better way of drawing previous patterns
+   but this previous pattern is capitulization of what
+   we learn -->
+
+  <!-- for the next patterns we used a bit offseting to create
+    plus sign pattern -->
+
+  <!-- <script type="module" src="/cyrilic_g.ts"></script> -->
+
+  <script type="module" src="/pluses.ts"></script>
 
 
   <!-- ------------------------------------------------------- -->
