--- a/src/index.html
+++ b/src/index.html
@@ -18,9 +18,11 @@
   <!-- <script type="module" src="/test2.ts"></script> -->
 
   <!-- ----------------------------------------------- -->
+  <!-- ----------------------------------------------- -->
 
   <!-- <script type="module" src="/setup.ts"></script> -->
 
+  <!-- ----------------------------------------------- -->
   <!-- ----------------------------------------------- -->
   <!-- ----       workshop and my observations -->
 
@@ -28,12 +30,14 @@
   <!-- <script type="module" src="/foo_bar.ts"></script> -->
 
   <!-- ----------------------------------------------- -->
+  <!-- ----------------------------------------------- -->
   <!-- ----       my observations -->
 
   <!-- <script type="module" src="/lorem_ipsum.ts"></script> -->
   <!-- <script type="module" src="/black_n_white.ts"></script> -->
   <!-- <script type="module" src="/gray_shades.ts"></script> -->
 
+  <!-- ----------------------------------------------- -->
   <!-- ----------------------------------------------- -->
   <!-- ----       workshop and some of my observations -->
 
@@ -43,15 +47,19 @@
 
   <!-- <script type="module" src="/little_black_more_white.ts"></script> -->
   <!-- ----------------------------------------------- -->
+  <!-- ----------------------------------------------- -->
 
-  <!-- we use modulo inside shader here -->
+  <!-- we use modulo inside shader here, for the first time -->
   <!-- <script type="module" src="/bars.ts"></script> -->
   <!-- <script type="module" src="/bars_again.ts"></script> -->
 
   <!-- --------------------------------------------------- -->
-  <!-- we use modulo inside shader here, and also if else statement -->
+  <!-- --------------------------------------------------- -->
+  <!-- we use modulo inside shader here, 
+   and also if else statement for the first time -->
   <!-- <script type="module" src="/stripes.ts"></script> -->
   <!-- <script type="module" src="/stripes_with_ternary.ts"></script> -->
+  <!-- ----------------------------------------------- -->
   <!-- ----------------------------------------------- -->
   <!-- Avoiding usage of if/if else statements and usage of ternarys
    by using  step   function   -->
@@ -65,11 +73,13 @@
 
 
   <!-- ------------------------------------------------------- -->
+  <!-- ------------------------------------------------------- -->
   <!-- using both uv coordinates to create pattern -->
 
   <!-- <script type="module" src="/crossing_stripes.ts"></script> -->
   <!-- <script type="module" src="/crossing_stripes_concise.ts"></script> -->
 
+  <!-- ------------------------------------------------------- -->
   <!-- ------------------------------------------------------- -->
   <!-- grid -->
   <!-- <script type="module" src="/grid.ts"></script> -->
@@ -78,7 +88,7 @@
    and started testing some values, so don't sweat if you don't
    understand what's happening -->
   <!-- I guess idea is to get familaiar yourself with the pattern
-    than understanding underlaying math -->
+   by changing values, more than understanding underlaying math -->
 
   <!-- <script type="module" src="/grid_and_edge.ts"></script> -->
 
@@ -88,12 +98,17 @@
    but this previous pattern is capitulization of what
    we learn -->
 
-  <!-- for the next patterns we used a bit offseting to create
-    plus sign pattern -->
+  <!-- for the next two patterns we used a bit offseting -->
 
   <!-- <script type="module" src="/cyrilic_g.ts"></script> -->
 
   <script type="module" src="/pluses.ts"></script>
+
+  <!-- just know there are more simpler ways of writing these
+   patterns above where we were offseting -->
+
+  <!-- ------------------------------------------------------- -->
+  <!-- ------------------------------------------------------- -->
 
 
   <!-- ------------------------------------------------------- -->
