--- a/src/index.html
+++ b/src/index.html
@@ -102,13 +102,20 @@
 
   <!-- <script type="module" src="/cyrilic_g.ts"></script> -->
 
-  <script type="module" src="/pluses.ts"></script>
+  <!-- <script type="module" src="/pluses.ts"></script> -->
 
   <!-- just know there are more simpler ways of writing these
    patterns above where we were offseting -->
 
   <!-- ------------------------------------------------------- -->
   <!-- ------------------------------------------------------- -->
+  <!-- we stopped doing black and white patter
+    we were doing grid in black and white pattern before -->
+  <!-- now we are doing gradients again -->
+  <!-- and we are doing offseting -->
+
+  <!-- in here we are using `abs` function for the first time -->
+  <script type="module" src="/black_in_the_middle.ts"></script>
 
 
   <!-- ------------------------------------------------------- -->
