--- a/src/index.html
+++ b/src/index.html
@@ -115,8 +115,16 @@
   <!-- and we are doing offseting -->
 
   <!-- in here we are using `abs` function for the first time -->
-  <script type="module" src="/black_in_the_middle.ts"></script>
+  <!-- <script type="module" src="/black_in_the_middle.ts"></script> -->
 
+  <!-- we are usin `min` function for the first time -->
+  <!-- <script type="module" src="/black_in_the_middle_xy.ts"></script> -->
+  <!-- we are using `max` function for the first time in here -->
+  <!-- this one looks cool, like tunnel vision -->
+  <script type="module" src="/with_max.ts"></script>
+
+  <!-- ------------------------------------------------------- -->
+  <!-- ------------------------------------------------------- -->
 
   <!-- ------------------------------------------------------- -->
   <!-- ------------------------------------------------------- -->
@@ -124,6 +132,11 @@
   <!-- ------------------------------------------------------- -->
   <!-- <script type="module" src="/practicing.ts"></script> -->
 
+  <!-- ------------------------------------------------------- -->
+  <!-- cool patterns I build just with experimenting -->
+  <!-- Maybe I can use some of these in my own projects -->
+
+  <!-- <script type="module" src="/my_1.ts"></script> -->
 
 </body>
 
