white frame and step

--- a/src/index.html
+++ b/src/index.html
@@ -121,10 +121,16 @@
   <!-- <script type="module" src="/black_in_the_middle_xy.ts"></script> -->
   <!-- we are using `max` function for the first time in here -->
   <!-- this one looks cool, like tunnel vision -->
-  <script type="module" src="/with_max.ts"></script>
+  <!-- <script type="module" src="/with_max.ts"></script> -->
 
   <!-- ------------------------------------------------------- -->
   <!-- ------------------------------------------------------- -->
+  <!-- we are again using step function
+   since we don't want gradients for these  -->
+  <script type="module" src="/white_frame.ts"></script>
+
+
+
 
   <!-- ------------------------------------------------------- -->
   <!-- ------------------------------------------------------- -->
@@ -134,9 +140,11 @@
 
   <!-- ------------------------------------------------------- -->
   <!-- cool patterns I build just with experimenting -->
+  <!-- also other cool patterns I picked from the workshop -->
   <!-- Maybe I can use some of these in my own projects -->
 
   <!-- <script type="module" src="/my_1.ts"></script> -->
+  <!-- <script type="module" src="/with_max.ts"></script> -->
 
 </body>
 
