white frame black frame intersection

--- a/src/index.html
+++ b/src/index.html
@@ -127,7 +127,11 @@
   <!-- ------------------------------------------------------- -->
   <!-- we are again using step function
    since we don't want gradients for these  -->
-  <script type="module" src="/white_frame.ts"></script>
+  <!-- <script type="module" src="/white_frame.ts"></script> -->
+  <!-- <script type="module" src="/white_frame_thin.ts"></script> -->
+  <!-- <script type="module" src="/white_frame_inversion.ts"></script> -->
+
+  <script type="module" src="/black_and_white_frame_intersection.ts"></script>
 
 
 
