black n'white rainbow

--- a/src/index.html
+++ b/src/index.html
@@ -131,9 +131,17 @@
   <!-- <script type="module" src="/white_frame_thin.ts"></script> -->
   <!-- <script type="module" src="/white_frame_inversion.ts"></script> -->
 
-  <script type="module" src="/black_and_white_frame_intersection.ts"></script>
+  <!-- <script type="module" src="/black_and_white_frame_intersection.ts"></script> -->
 
+  <!-- ------------------------------------------------------- -->
+  <!-- ------------------------------------------------------- -->
+  <!-- ------------------------------------------------------- -->
+  <!-- ------------------------------------------------------- -->
+  <!-- WE ARE USING `ShaderMaterial` instead of `RawShaderMaterial` 
+   from this point -->
+  <!-- <script type="module" src="/gray_rainbow.ts"></script> -->
 
+  <script type="module" src="/gray_rainbow_with_floor.ts"></script>
 
 
   <!-- ------------------------------------------------------- -->
