--- a/src/index.html
+++ b/src/index.html
@@ -127,6 +127,7 @@
   <!-- ------------------------------------------------------- -->
   <!-- we are again using step function
    since we don't want gradients for these  -->
+
   <!-- <script type="module" src="/white_frame.ts"></script> -->
   <!-- <script type="module" src="/white_frame_thin.ts"></script> -->
   <!-- <script type="module" src="/white_frame_inversion.ts"></script> -->
@@ -139,9 +140,23 @@
   <!-- ------------------------------------------------------- -->
   <!-- WE ARE USING `ShaderMaterial` instead of `RawShaderMaterial` 
    from this point -->
+
   <!-- <script type="module" src="/gray_rainbow.ts"></script> -->
 
-  <script type="module" src="/gray_rainbow_with_floor.ts"></script>
+  <!-- <script type="module" src="/gray_rainbow_with_floor.ts"></script> -->
+
+  <!-- <script type="module" src="/gray_rects.ts"></script> -->
+
+
+  <!-- FROM NOW ON WE WILL BE USING FUNCTIONS THAT
+   PRODUCE SOME RANDOMNES
+   I GUESS WE EILL ALSO USE SOME noise FUNCTIONS -->
+
+
+  <!-- <script type="module" src="/tv_static.ts"></script> -->
+
+
+  <script type="module" src="/random_gray_rects.ts"></script>
 
 
   <!-- ------------------------------------------------------- -->
@@ -157,6 +172,8 @@
 
   <!-- <script type="module" src="/my_1.ts"></script> -->
   <!-- <script type="module" src="/with_max.ts"></script> -->
+  <!-- <script type="module" src="/gray_rects.ts"></script> -->
+
 
 </body>
 
