--- a/src/index.html
+++ b/src/index.html
@@ -156,7 +156,8 @@
   <!-- <script type="module" src="/tv_static.ts"></script> -->
 
 
-  <script type="module" src="/random_gray_rects.ts"></script>
+  <!-- <script type="module" src="/random_gray_rects.ts"></script> -->
+  <script type="module" src="/random_gray_rects_with_offset.ts"></script>
 
 
   <!-- ------------------------------------------------------- -->
