--- a/src/index.html
+++ b/src/index.html
@@ -157,7 +157,13 @@
 
 
   <!-- <script type="module" src="/random_gray_rects.ts"></script> -->
-  <script type="module" src="/random_gray_rects_with_offset.ts"></script>
+  <!-- <script type="module" src="/random_gray_rects_with_offset.ts"></script> -->
+
+
+  <!-- --------------------------------------------------------- -->
+  <!-- --------------------------------------------------------- -->
+  <!-- USING `length` function FOR THE FIRST TIME -->
+  <script type="module" src="/length.ts"></script>
 
 
   <!-- ------------------------------------------------------- -->
