--- a/src/index.html
+++ b/src/index.html
@@ -163,7 +163,23 @@
   <!-- --------------------------------------------------------- -->
   <!-- --------------------------------------------------------- -->
   <!-- USING `length` function FOR THE FIRST TIME -->
-  <script type="module" src="/length.ts"></script>
+  <!-- <script type="module" src="/length.ts"></script> -->
+
+  <!-- <script type="module" src="/radial_center.ts"></script> -->
+
+
+  <!-- USING `distance` function FOR THE FIRST TIME -->
+  <!-- <script type="module" src="/distance.ts"></script> -->
+
+
+  <!-- <script type="module" src="/inverse_radial_center.ts"></script> -->
+
+
+  <!-- <script type="module" src="/small_light_circle.ts"></script> -->
+
+  <script type="module" src="/small_light_circle_better.ts"></script>
+
+
 
 
   <!-- ------------------------------------------------------- -->
@@ -180,6 +196,8 @@
   <!-- <script type="module" src="/my_1.ts"></script> -->
   <!-- <script type="module" src="/with_max.ts"></script> -->
   <!-- <script type="module" src="/gray_rects.ts"></script> -->
+  <!-- <script type="module" src="/my_2.ts"></script> -->
+  <!-- <script type="module" src="/small_light_circle_better.ts"></script> -->
 
 
 </body>
