--- a/src/index.html
+++ b/src/index.html
@@ -177,9 +177,15 @@
 
   <!-- <script type="module" src="/small_light_circle.ts"></script> -->
 
-  <script type="module" src="/small_light_circle_better.ts"></script>
+  <!-- <script type="module" src="/small_light_circle_better.ts"></script> -->
 
+  <!-- ALSO THIS WAS ONE OF THE PATTERNS WHERE
+   AUTHOR OF THE WORKSHOP DIDN'T KNOW WHAT HE'S DOING -->
+  <!-- so he doesn't know why by eith just changin of values he
+    in a sense with brute force get to the result -->
+  <!-- <script type="module" src="/ellipse_in_center.ts"></script> -->
 
+  <script type="module" src="/four_pointed_star.ts"></script>
 
 
   <!-- ------------------------------------------------------- -->
