--- a/src/index.html
+++ b/src/index.html
@@ -185,7 +185,13 @@
     in a sense with brute force get to the result -->
   <!-- <script type="module" src="/ellipse_in_center.ts"></script> -->
 
-  <script type="module" src="/four_pointed_star.ts"></script>
+  <!-- <script type="module" src="/four_pointed_star.ts"></script> -->
+
+  <!-- --------------------------------------------------------- -->
+  <!-- --------------------------------------------------------- -->
+  <!-- DEFINING rotate FUNCTION in next example
+   TO ROTATE uv COORDINATES  -->
+  <script type="module" src="/four_pointed_star_rotated.ts"></script>
 
 
   <!-- ------------------------------------------------------- -->
