--- a/src/index.html
+++ b/src/index.html
@@ -189,9 +189,13 @@
 
   <!-- --------------------------------------------------------- -->
   <!-- --------------------------------------------------------- -->
-  <!-- DEFINING rotate FUNCTION in next example
-   TO ROTATE uv COORDINATES  -->
-  <script type="module" src="/four_pointed_star_rotated.ts"></script>
+  <!-- WE COPIED rotate FUNCTION DEFINITON FROM SOMEWHERE
+    in next example
+   TO USE IT TO ROTATE uv COORDINATES  -->
+  <!-- <script type="module" src="/four_pointed_star_rotated.ts"></script> -->
+
+  <!-- WE USE #define FOR THE FIRST TIME IN HERE -->
+  <script type="module" src="/four_pointed_star_rotated_pi.ts"></script>
 
 
   <!-- ------------------------------------------------------- -->
