rings: blacj and white

--- a/src/index.html
+++ b/src/index.html
@@ -195,13 +195,23 @@
   <!-- <script type="module" src="/four_pointed_star_rotated.ts"></script> -->
 
   <!-- WE USE #define FOR THE FIRST TIME IN HERE -->
-  <script type="module" src="/four_pointed_star_rotated_pi.ts"></script>
+  <!-- <script type="module" src="/four_pointed_star_rotated_pi.ts"></script> -->
+
+  <!-- --------------------------------------------------------- -->
+  <!-- --------------------------------------------------------- -->
+  <!-- we used `step` and `distance` here together-->
+  <!-- <script type="module" src="/white_frame_black_circle.ts"></script> -->
+
+  <!-- --------------------------------------------------------- -->
+  <!-- <script type="module" src="/dark_ring_gradient.ts"></script> -->
+
+  <script type="module" src="/black_ring.ts"></script>
 
 
-  <!-- ------------------------------------------------------- -->
-  <!-- ------------------------------------------------------- -->
-  <!-- ------------------------------------------------------- -->
-  <!-- ------------------------------------------------------- -->
+  <!-- --------------------------------------------------------- -->
+  <!-- --------------------------------------------------------- -->
+  <!-- --------------------------------------------------------- -->
+  <!-- --------------------------------------------------------- -->
   <!-- <script type="module" src="/practicing.ts"></script> -->
 
   <!-- ------------------------------------------------------- -->
