--- a/src/index.html
+++ b/src/index.html
@@ -205,7 +205,15 @@
   <!-- --------------------------------------------------------- -->
   <!-- <script type="module" src="/dark_ring_gradient.ts"></script> -->
 
-  <script type="module" src="/black_ring.ts"></script>
+  <!-- <script type="module" src="/black_ring.ts"></script> -->
+
+  <!-- --------------------------------------------------------- -->
+  <!-- --------------------------------------------------------- -->
+  <!-- --------------------------------------------------------- -->
+
+  <script type="module" src="/sinus_thing.ts"></script>
+
+
 
 
   <!-- --------------------------------------------------------- -->
