--- a/src/index.html
+++ b/src/index.html
@@ -207,12 +207,10 @@
 
   <!-- <script type="module" src="/black_ring.ts"></script> -->
 
-  <!-- --------------------------------------------------------- -->
-  <!-- --------------------------------------------------------- -->
-  <!-- --------------------------------------------------------- -->
 
-  <script type="module" src="/sinus_thing.ts"></script>
+  <!-- <script type="module" src="/sinus_thing.ts"></script> -->
 
+  <script type="module" src="/stain.ts"></script>
 
 
 
