--- a/src/index.html
+++ b/src/index.html
@@ -210,8 +210,31 @@
 
   <!-- <script type="module" src="/sinus_thing.ts"></script> -->
 
-  <script type="module" src="/stain.ts"></script>
+  <!-- <script type="module" src="/stain.ts"></script> -->
 
+  <!-- <script type="module" src="/stain_frequency.ts"></script> -->
+  <!-- --------------------------------------------------------- -->
+  <!-- --------------------------------------------------------- -->
+  <!-- Angles -->
+  <!-- WE USED arcus tangens FOR THE FIRTST TIME IN HERE (atan) -->
+  <!-- <script type="module" src="/angles.ts"></script> -->
+
+  <!-- <script type="module" src="/angles_and_offset.ts"></script> -->
+
+  <!-- <script type="module" src="/angles_and_circular.ts"></script> -->
+
+  <!-- <script type="module" src="/angles_and_circular_with_modulo.ts"></script> -->
+
+  <!-- <script type="module" src="/angles_black_and_white.ts"></script> -->
+
+  <!-- <script type="module" src="/wire_ring.ts"></script> -->
+
+  <!-- --------------------------------------------------------- -->
+  <!-- --------------------------------------------------------- -->
+  <!-- NOISE -->
+
+
+  <script type="module" src="/perlin_noise.ts"></script>
 
 
   <!-- --------------------------------------------------------- -->
@@ -230,6 +253,7 @@
   <!-- <script type="module" src="/gray_rects.ts"></script> -->
   <!-- <script type="module" src="/my_2.ts"></script> -->
   <!-- <script type="module" src="/small_light_circle_better.ts"></script> -->
+  <!-- <script type="module" src="/angles_and_circular_with_modulo.ts"></script> -->
 
 
 </body>
