perlin noise all

--- a/src/index.html
+++ b/src/index.html
@@ -234,7 +234,18 @@
   <!-- NOISE -->
 
 
-  <script type="module" src="/perlin_noise.ts"></script>
+  <!-- <script type="module" src="/perlin_noise.ts"></script> -->
+  <!-- <script type="module" src="/perlin_with_step.ts"></script> -->
+  <!-- <script type="module" src="/perlin_with_abs.ts"></script> -->
+  <!-- <script type="module" src="/perlin_with_sin.ts"></script> -->
+  <script type="module" src="/perlin_sharper.ts"></script>
+
+  <!-- --------------------------------------------------------- -->
+  <!-- --------------------------------------------------------- -->
+  <!-- TEST IT WITH COLORS -->
+  <!-- WE ARE DONE WITH DEFINING PATTERNS -->
+  <!-- WE NOW WANT TO ADD COLOR TO THEM -->
+  <!-- WE ARE GOING TO USE `mix` FUNCTION FOR THE FIRST TIME -->
 
 
   <!-- --------------------------------------------------------- -->
