--- a/src/index.html
+++ b/src/index.html
@@ -238,7 +238,7 @@
   <!-- <script type="module" src="/perlin_with_step.ts"></script> -->
   <!-- <script type="module" src="/perlin_with_abs.ts"></script> -->
   <!-- <script type="module" src="/perlin_with_sin.ts"></script> -->
-  <script type="module" src="/perlin_sharper.ts"></script>
+  <!-- <script type="module" src="/perlin_sharper.ts"></script> -->
 
   <!-- --------------------------------------------------------- -->
   <!-- --------------------------------------------------------- -->
@@ -247,12 +247,19 @@
   <!-- WE NOW WANT TO ADD COLOR TO THEM -->
   <!-- WE ARE GOING TO USE `mix` FUNCTION FOR THE FIRST TIME -->
 
+  <!-- <script type="module" src="/perlin_with_mix.ts"></script> -->
+
+  <!-- fixing a bug in terms of color for other examples -->
+  <script type="module" src="/strength_above_one_bug.ts"></script>
+
 
   <!-- --------------------------------------------------------- -->
   <!-- --------------------------------------------------------- -->
   <!-- --------------------------------------------------------- -->
   <!-- --------------------------------------------------------- -->
+  <!-- Some practicing, you can avoid this -->
   <!-- <script type="module" src="/practicing.ts"></script> -->
+
 
   <!-- ------------------------------------------------------- -->
   <!-- cool patterns I build just with experimenting -->
